src/tests/fixtures/typename/PropertyTypenameNonStringInitializer.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename = 1 as const;
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertyTypenameNonStringInitializer.ts:3:16 - error: Expected `__typename` property initializer to be a string literal. For example: `__typename = "User" as const` or `__typename: "User";`. This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename = 1 as const;
                 ~


-- Code Action: "Create Grats-compatible `__typename` property" (fix-typename-property) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class User {
-   __typename = 1 as const;
+   __typename = "User" as const;
    /** @gqlField */